--- a/fileviewer/src/main/res/layout/activity_file_view.xml
+++ b/fileviewer/src/main/res/layout/activity_file_view.xml
@@ -6,4 +6,31 @@
     android:layout_height="match_parent"
     tools:context=".FileViewActivity">
 
+    <RelativeLayout
+        android:id="@+id/rl_tbsView"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+
+        <TextView
+            android:id="@+id/tv_state"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerInParent="true"
+            android:text="@string/title_download"
+            android:textColor="@android:color/black"
+            android:textSize="13sp" />
+
+        <ProgressBar
+            android:id="@+id/progressBar_download"
+            style="?android:attr/progressBarStyleHorizontal"
+            android:layout_width="match_parent"
+            android:layout_height="3dp"
+            android:layout_below="@+id/tv_state"
+            android:layout_marginLeft="12dp"
+            android:layout_marginRight="12dp"
+            android:layout_marginTop="6dp"
+            android:max="100"
+            android:progressDrawable="@drawable/progressbar_color" />
+    </RelativeLayout>
+
 </android.support.constraint.ConstraintLayout>
